objects/QIDC__OK_Relation_Caching_ims__c.object
<CustomObject>
    <description>This object is used as a caching to store Relation data from each packet received from OneKey. Once the Relation mapping is processed Records from this object will be deleted.</description>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>To Store Country Name</description>
        <inlineHelpText>To Store Country Name</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Job_ID_ims__c</fullName>
        <description>To store Job ID of current Job</description>
        <inlineHelpText>To store Job ID of  current Job</inlineHelpText>
        <label>Job ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Link_Code_Label_ims__c</fullName>
        <description>To store Relation Link Code Label</description>
        <inlineHelpText>To store Relation Link Code Label</inlineHelpText>
        <label>Relation Link Code Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Link_Code_ims__c</fullName>
        <description>To store Relation Link Code</description>
        <inlineHelpText>To store Relation Link Code</inlineHelpText>
        <label>Relation Link Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_OKID_ims__c</fullName>
        <description>This is the field which stores OneKey ID of Workplace or Activity based on entity type</description>
        <inlineHelpText>This is the field which stores OneKey ID of Workplace or Activity based on entity type</inlineHelpText>
        <label>Parent OKID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_SFID_ims__c</fullName>
        <description>To Store SF ID of OneKey Entity</description>
        <inlineHelpText>To Store SF ID of OneKey Entity</inlineHelpText>
        <label>Parent SFID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Related_FieldName_ims__c</fullName>
        <description>To store Related Salesforce Field API Name. This is the field which stores OneKey ID of the related entity (Related OneKey ID)</description>
        <inlineHelpText>To store Related Salesforce Field API Name. This is the field which stores OneKey ID of the related entity (Related OneKey ID)</inlineHelpText>
        <label>Related Salesforce Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Related_OKID_ims__c</fullName>
        <description>To Store EID of Related OneKey Entity</description>
        <inlineHelpText>To Store EID of Related OneKey Entity</inlineHelpText>
        <label>Related OneKey ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Related_SObjectType_ims__c</fullName>
        <description>To store Related Salesforce Object API Name</description>
        <inlineHelpText>To store Related Salesforce Object API Name</inlineHelpText>
        <label>Related Salesforce Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Relation_ID_ims__c</fullName>
        <description>To store custom Relation ID</description>
        <externalId>true</externalId>
        <inlineHelpText>To store custom Relation ID</inlineHelpText>
        <label>Relation ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_Code_ims__c</fullName>
        <description>To store Relation Type Code</description>
        <inlineHelpText>To store Relation Type Code</inlineHelpText>
        <label>Relation Type Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OneKey Relation Caching</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Country_ims__c</columns>
        <columns>QIDC__Parent_OKID_ims__c</columns>
        <columns>QIDC__Parent_SFID_ims__c</columns>
        <columns>QIDC__Related_OKID_ims__c</columns>
        <columns>QIDC__Related_FieldName_ims__c</columns>
        <columns>QIDC__Related_SObjectType_ims__c</columns>
        <columns>QIDC__Relation_ID_ims__c</columns>
        <columns>QIDC__Link_Code_ims__c</columns>
        <columns>QIDC__Link_Code_Label_ims__c</columns>
        <columns>QIDC__Type_Code_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Relation  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Relations Caching</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>